--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -133,21 +133,20 @@
 
 <div class="row">
     <div class="col-md-6">
-        <div id="botoesperguntas">
+        <div class="botoesperguntas">
             <button class="btn btn-info" type="button" data-toggle="collapse" data-target="#resposta1"
                 aria-expanded="false" aria-controls="collapseExample">
-                Como faço para entrar na minha conta do ClickIn?
+                Como faço para criar uma conta do ClickIn?
             </button>
 
             <div class="collapse" id="resposta1">
                 <li> Acesse www.clickin.com.br</li>
-                <li> Clique em entrar</li>
-                <li> Insira seu login e senha</li>
-                <li> Clique em entrar novamente</li>
+                <li>Clique em Cadastrar-se.</li>
+                <li>Insira seu nome, Telefone , email e senha</li>
             </div>
         </div>
 
-        <div id="botoesperguntas">
+        <div class="botoesperguntas">
             <button class="btn btn-info" type="button" data-toggle="collapse" data-target="#resposta2"
                 aria-expanded="false" aria-controls="collapseExample">
                 Como faço para entrar na minha conta do ClickIn?
@@ -161,41 +160,40 @@
             </div>
         </div>
 
-        <div id="botoesperguntas">
+        <div class="botoesperguntas">
             <button class="btn btn-info" type="button" data-toggle="collapse" data-target="#resposta3"
                 aria-expanded="false" aria-controls="collapseExample">
-                Como faço para entrar na minha conta do ClickIn?
+                Não consigo entrar no ClickIn. E agora?
             </button>
 
             <div class="collapse" id="resposta3">
-                <li> Acesse www.clickin.com.br</li>
-                <li> Clique em entrar</li>
-                <li> Insira seu login e senha</li>
-                <li> Clique em entrar novamente</li>
+                <li> Verifique se os campos de login estão corretos</li>
+                <li> Se a senha não estiver funcionando tente redefinir</li>
+                <li> Descubra se sua conta foi desativada, se sim envie uma mensagem para nós</li>
             </div>
         </div>
 
-        <div id="botoesperguntas">
+        <div class="botoesperguntas">
             <button class="btn btn-info" type="button" data-toggle="collapse" data-target="#resposta4"
                 aria-expanded="false" aria-controls="collapseExample">
-                Como faço para entrar na minha conta do ClickIn?
+                Como faço para criar uma senha forte do ClickIn?
             </button>
 
-            <div id="resposta4">
-                <li> Acesse www.clickin.com.br</li>
-                <li> Clique em entrar</li>
-                <li> Insira seu login e senha</li>
-                <li> Clique em entrar novamente</li>
+            <div class="collapse" id="resposta4">
+                <li> A senha deve ser fácil para lembrar, mas dificil para outros adivinharem</li>
+                <li> Use uma senha diferente de outras redes</li>
+                <li> Senhas longas são mais seguras</li>
+                <li> Indicamos para senha forte precisa ter 10 caracteres e ao menos um caracter especial (@#$&%)</li>
             </div>
         </div>
 
-        <div id="botoesperguntas">
+        <div class="collapse botoesperguntas">
             <button class="btn btn-info" type="button" data-toggle="collapse" data-target="#resposta5"
                 aria-expanded="false" aria-controls="collapseExample">
                 Como faço para entrar na minha conta do ClickIn?
             </button>
 
-            <div id="resposta5">
+            <div class="collapse" id="resposta5">
                 <li> Acesse www.clickin.com.br</li>
                 <li> Clique em entrar</li>
                 <li> Insira seu login e senha</li>
@@ -203,21 +201,32 @@
             </div>
         </div>
 
-        <div id="botoesperguntas">
+        <div class="botoesperguntas">
             <button class="btn btn-info" type="button" data-toggle="collapse" data-target="#resposta6"
                 aria-expanded="false" aria-controls="collapseExample">
-                Como faço para entrar na minha conta do ClickIn?
+                Como faço para entrar em contato com a central de ajuda?
             </button>
 
-            <div id="resposta6">
+            <div class="collapse" id="resposta6">
                 <li> Acesse www.clickin.com.br</li>
-                <li> Clique em entrar</li>
-                <li> Insira seu login e senha</li>
-                <li> Clique em entrar novamente</li>
+                <li> Clique no botão dúvidas</li>
+                <li> Deslize até o fim da página</li>
+                <li> Insira seus dados e envie sua dúvida, aguarde que logo responderemos por e-mail</li>
+            </div>
+        </div>
+        <div class="botoesperguntas">
+            <button class="btn btn-info" type="button" data-toggle="collapse" data-target="#resposta7"
+                aria-expanded="false" aria-controls="collapseExample">
+                Como faço para entrar em contato acessar a comunidade de ajuda PCD's?
+            </button>
+    
+            <div class="collapse" id="resposta7">
+                <li> Obtenha ajuda de outras pessoas no ClickIn com perguntas semelhantes e crie sua propria comunidade</li>
+              
             </div>
         </div>
     </div>
-
+    
     <div class="col-md-3">
         <img src="../../assets/images/interrogacao.png" id="foto">
     </div>
@@ -237,14 +246,12 @@
             <div class="card mb-3" style="max-width: 540px;">
                 <div class="row no-gutters">
                     <div class="col-md-4">
-                        <img src="../../assets/images/seuperfil.png" class="card-img" alt="...">
+                        <img src="../../assets/images/faq2.png" class="card-img" alt="...">
                     </div>
                     <div class="col-md-8">
                         <div class="card-body">
-                            <h5 class="card-title">Seu perfil e configurações</h5>
-                            <p class="card-text">Saiba como adicionar uma foto , editar as suas informações e
-                                gerenciar as publicações na sua linha do tempo</p>
-                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                            <h5 class="card-title">O que é o ClickIn?</h5>
+                            <p class="card-text">ClickIn é uma rede social voltada para relacionamentos profissionais de PCD's que pode ser usada para encontrar emprego, anunciar vagas, fazer parcerias e networking.</p>
                         </div>
                     </div>
                 </div>
@@ -253,15 +260,14 @@
         <div class="card mb-3" onclick="" style="max-width: 540px;">
             <div class="row no-gutters">
                 <div class="col-md-4">
-                    <img src="../../assets/images/loginsenha.png" class="card-img" alt="...">
+                    <img src="../../assets/images/faq2.png" class="card-img" alt="...">
                 </div>
                 <div class="col-md-8">
                     <div class="card-body">
-                        <h5 class="card-title">Login e senha</h5>
+                        <h5 class="card-title">Preciso de algo especial para usa-lo?</h5>
                         <p class="card-text">
-                            Saiba como alterar sua senha e corrigir problemas de login.
+                            É indicado para pessoas com deficiência e empresas que estão com oportunidades de trabalho e inclusão no mercado de trabalho.
                         </p>
-                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                     </div>
                 </div>
             </div>
@@ -272,14 +278,12 @@
             <div class="card mb-3" style="max-width: 540px;">
                 <div class="row no-gutters">
                     <div class="col-md-4">
-                        <img src="../../assets/images/seuperfil.png" class="card-img" alt="...">
+                        <img src="../../assets/images/faq2.png" class="card-img" alt="...">
                     </div>
                     <div class="col-md-8">
                         <div class="card-body">
-                            <h5 class="card-title">Seu perfil e configurações</h5>
-                            <p class="card-text">Saiba como adicionar uma foto , editar as suas informações e
-                                gerenciar as publicações na sua linha do tempo</p>
-                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                            <h5 class="card-title">Como posso fazer uma postagem no ClickIn?</h5>
+                            <p class="card-text">Você pode postar no seu feed pelo site clickIn.com, depois de logar na sua conta por um dispositivo móvel ou um aplicativo. </p>
                         </div>
                     </div>
                 </div>
@@ -288,15 +292,14 @@
         <div class="card mb-3" onclick="" style="max-width: 540px;">
             <div class="row no-gutters">
                 <div class="col-md-4">
-                    <img src="../../assets/images/loginsenha.png" class="card-img" alt="...">
+                    <img src="../../assets/images/faq2.png" class="card-img" alt="...">
                 </div>
                 <div class="col-md-8">
                     <div class="card-body">
-                        <h5 class="card-title">Login e senha</h5>
+                        <h5 class="card-title">Como faço para editar uma postagem?</h5>
                         <p class="card-text">
-                            Saiba como alterar sua senha e corrigir problemas de login.
+                           Para editar sua postagem você precisa entrar no seu feed e clicar no botão editar e reescrever o que você precisa alterar.
                         </p>
-                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                     </div>
                 </div>
             </div>
@@ -311,8 +314,8 @@
 
 <div class="row">
 
-    <div class="col-md-12">
-        <h2 class="display-4  p-0 mb-4">Contate-nos</h2>
+    <div class="col-md-12" id="duvidas">
+        <h2 class="display-4  p-0 mb-4">Olá, ainda não encontrou o que precisa? <br> Mande sua dúvida para nós </h2>
     </div>
 
 </div>
@@ -328,7 +331,7 @@
                 <form class="needs-validation" novalidate>
                     <div class="row">
                         <div class="col-md-12">
-                            <label for="validationTooltip01"> Nome Completo </label>
+                            <label for="validationTooltip01"> Nome </label>
                             <input type="text" class="form-control" placeholder="Digite o seu Nome Completo" value=""
                                 required [(ngModel)]="nomeCompleto" [ngModelOptions]="{standalone: true}">
                             <span *ngIf='_msgErroNome'>{{_msgErroNome}}</span>
@@ -347,21 +350,10 @@
                         </div>
 
                     </div>
-
-                    <div class="row mt-2">
-                        <div class="col-md-12">
-                            <label for="validationTooltip04">Telefone</label>
-                            <input type="text" class="form-control" [(ngModel)]="telefone"
-                                [ngModelOptions]="{standalone: true}" placeholder="Digite o seu telefone" required>
-                            <span *ngIf='_msgErroTelefone'>{{_msgErroTelefone}}</span>
-                        </div>
-                    </div>
-
-
                     <div class="row mt-2">
                         <div class="col-md-12">
                             <label for="exampleFormControlTextarea1">Mensagem</label>
-                            <textarea class="form-control" [(ngModel)]="mensagem" [ngModelOptions]="{standalone: true}"
+                            <textarea class="form-control" [(ngModel)]="mensagem" placeholder="Deixe sua pergunta" [ngModelOptions]="{standalone: true}"
                                 rows="3"></textarea>
                             <span *ngIf='_msgErroMensagem'>{{_msgErroMensagem}}</span>
                         </div>
