--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -142,3 +142,9 @@
       alt="imagem cadeira de rodas colorida">
   </div>
 </div>
+
+<div class="container">
+  <div class="col-md-12">
+    <img src="/assets/images/giphy (2).gif" alt="">
+  </div>
+</div>
