--- a/src/app/quemsomos/quemsomos.component.html
+++ b/src/app/quemsomos/quemsomos.component.html
@@ -128,7 +128,7 @@
 
 <h3 class="display-4  p-0 mb-4">Sobre o projeto</h3>
 
-<p class="lead"> O ClickIn é uma rede que tem como foco estimular a inclusão de PCD’s no mercado de trabalho, para
+<p class="lead" id="sobre"> O ClickIn é uma rede que tem como foco estimular a inclusão de PCD’s no mercado de trabalho, para
     facilitar o acesso a informações e atualidades do meio.
     Viabilizar a conexão entre empregadores e profissionais PCDs da-se na busca por mapear e entender quais são as
     necessidades e requisitos para incluir essa população nas empresas. A partir de entrevistas e pesquisas, foram
@@ -178,12 +178,3 @@
 
 
 <!-- FOOTER -->
-
-
-
-<div class="col-md-12">
-    <hr>
-    <div id="textorodape">
-        <strong>ClickIn&reg;</strong> 2020
-    </div>
-</div>
