--- a/src/app/faq/faq.component.css
+++ b/src/app/faq/faq.component.css
@@ -23,9 +23,10 @@ h4{
 
 /* LISTA DE PERGUNTAS */
 
-#botoesperguntas{
+.botoesperguntas{
     margin-left: 30%;
     margin-top: 1%;
+    
 }
 
 /* RESPOSTAS */
@@ -62,4 +63,7 @@ h2{
     width: 250px;
     margin-left: 50%;
     margin-top: 5%;
+}
+#duvidas{
+    margin-top: 50px;
 }
