--- a/src/app/embaixadores/embaixadores.component.html
+++ b/src/app/embaixadores/embaixadores.component.html
@@ -143,8 +143,7 @@
 
         <div class="coll-md-6">
             <div class="embed-responsive embed-responsive-16by9 video">
-                <iframe class="embed-responsive-item" src="https://youtu.be/jnGOfMVJrVY"
-                    allowfullscreen></iframe>
+                <iframe width="847" height="441" src="https://www.youtube.com/embed/jnGOfMVJrVY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </div>
 
