--- a/src/app/feed/feed.component.html
+++ b/src/app/feed/feed.component.html
@@ -28,7 +28,7 @@
 
                 <ul class="list-group">
                         <li class="list-group-item d-flex justify-content-between align-items-center h6 text-muted">
-                                <a class="nav-link" [routerLink]="'/pessoafisica'">Perfil</a>
+                                <a class="nav-link" [routerLink]="'/perfilpessoafisica'">Perfil</a>
                                 <span class="badge badge badge-pill" ></span>
                               </li>
                         <li class="list-group-item d-flex justify-content-between align-items-center h6 text-muted">
