--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -213,8 +213,8 @@
     <div class="row">
       <div class="col">
         <nav class="navbar navbar-expand-lg navbar-transparent" id="navbaixo">
-          <a class="nav-link" (click)="onClick('sobrenos')">Quem Somos</a><strong>|</strong>
-          <a class="nav-link" (click)="onClick('embaixadores')">Embaixadores </a> <strong>|</strong>
+          <a class="nav-link" (click)="triggerScrollToQS()">Quem Somos</a><strong>|</strong>
+          <a class="nav-link" (click)="triggerScrollToEm()">Embaixadores </a> <strong>|</strong>
           <a class="nav-link" [routerLink]="'/contato'">Contato </a><strong>|</strong>
           <a class="nav-link" [routerLink]="'/faq'">Ajuda</a>
  
@@ -332,4 +332,3 @@
            <strong>ClickIn&reg;</strong> 2020
          </div>
        </div>
-
