--- a/src/app/noticias/noticias.component.html
+++ b/src/app/noticias/noticias.component.html
@@ -1,1 +1,128 @@
-<p>noticias works!</p>
+<!-- NAVBAR -->
+
+<div class="col-md-7">
+    <nav class="navbar navbar-expand-lg navbar-transparent ">
+  
+      <a [routerLink]="'/home'" class="titulo"><strong>
+          <img src="/assets/images/logonew.png" id="logo">
+        </strong></a>
+      <a class="navbar-brand" href="#"></a>
+  
+      <div class="dropdown">
+        <button class="btn btn-light dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
+          aria-haspopup="true" aria-expanded="false">
+          Cadastre-se
+        </button>
+  
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+          <a class="dropdown-item" data-toggle="modal" data-target="#modalCadastro">Candidato</a>
+          <a class="dropdown-item" data-toggle="modal" data-target="#modalCadastroEmpresa">Empresa</a>
+        </div>
+      </div>
+  
+      <button type="button" data-toggle="modal" data-target="#modalLogin" class="btn btn-outline-dark">Entrar</button>
+  
+    </nav>
+  </div>
+
+  <div class="row" id="titulo">
+      <div class="col-md-12">
+        <h1>Boletim Diário</h1>
+        <h4>sábado, 1 de fevereiro</h4>
+        <p>Olá, confira as noticias de hoje</p>
+      </div>
+  </div>
+
+  <div class="card mb-3" >
+    <div class="row no-gutters">
+      <div class="col-md-4">
+        <img src="../../assets/images/noticia1.jpg" class="card-img" alt="...">
+      </div>
+      <div class="col-md-8">
+        <div class="card-body">
+          <h5 class="card-title">Diversidade é o segredo para uma equipe de sucesso</h5>
+          <p class="card-text">Um estudo da Harvard revelou que diversidade é o fator mais importante para se construir um time de sucesso. A pesquisa analisou toda a população de trabalhadores da Suécia por 10 anos. Segundo o estudo, o conhecimento técnico e científico da humanidade superou a capacidade de um único indivíduo. Assim, é preciso se unir para aplicar este conhecimento de forma prática, pois muitas habilidades altamente especializadas seriam inúteis se não fossem acompanhadas de habilidades complementares.</p>
+          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="card mb-3" >
+    <div class="row no-gutters">
+      <div class="col-md-4">
+        <img src="../../assets/images/noticia 2.jpg" class="card-img" alt="...">
+      </div>
+      <div class="col-md-8">
+        <div class="card-body">
+          <h5 class="card-title">Como se preparar para a aposentadoria?</h5>
+          <p class="card-text">Um estudo da Harvard revelou que diversidade é o fator mais importante para se construir um time de sucesso. A pesquisa analisou toda a população de trabalhadores da Suécia por 10 anos. Segundo o estudo, o conhecimento técnico e científico da humanidade superou a capacidade de um único indivíduo. Assim, é preciso se unir para aplicar este conhecimento de forma prática, pois muitas habilidades altamente especializadas seriam inúteis se não fossem acompanhadas de habilidades complementares.</p>
+          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="card mb-3" >
+    <div class="row no-gutters">
+      <div class="col-md-4">
+        <img src="../../assets/images/noticia 3.jpg" class="card-img" alt="...">
+      </div>
+      <div class="col-md-8">
+        <div class="card-body">
+          <h5 class="card-title">O que fazer quando o emprego dos sonhos vira pesadelo?</h5>
+          <p class="card-text">Um estudo da Harvard revelou que diversidade é o fator mais importante para se construir um time de sucesso. A pesquisa analisou toda a população de trabalhadores da Suécia por 10 anos. Segundo o estudo, o conhecimento técnico e científico da humanidade superou a capacidade de um único indivíduo. Assim, é preciso se unir para aplicar este conhecimento de forma prática, pois muitas habilidades altamente especializadas seriam inúteis se não fossem acompanhadas de habilidades complementares.</p>
+          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  
+  <div class="card mb-3" >
+    <div class="row no-gutters">
+      <div class="col-md-4">
+        <img src="../../assets/images/noticia 4.jpg" class="card-img" alt="...">
+      </div>
+      <div class="col-md-8">
+        <div class="card-body">
+          <h5 class="card-title">Como fazer um pitch atrativo para os investidores?</h5>
+          <p class="card-text">Um estudo da Harvard revelou que diversidade é o fator mais importante para se construir um time de sucesso. A pesquisa analisou toda a população de trabalhadores da Suécia por 10 anos. Segundo o estudo, o conhecimento técnico e científico da humanidade superou a capacidade de um único indivíduo. Assim, é preciso se unir para aplicar este conhecimento de forma prática, pois muitas habilidades altamente especializadas seriam inúteis se não fossem acompanhadas de habilidades complementares.</p>
+          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="card mb-3" >
+    <div class="row no-gutters">
+      <div class="col-md-4">
+        <img src="../../assets/images/desgraça.jpg" class="card-img" alt="...">
+      </div>
+      <div class="col-md-8">
+        <div class="card-body">
+          <h5 class="card-title">Elimine pensamentos "sabotadores" e evite o burnout</h5>
+          <p class="card-text">Um estudo da Harvard revelou que diversidade é o fator mais importante para se construir um time de sucesso. A pesquisa analisou toda a população de trabalhadores da Suécia por 10 anos. Segundo o estudo, o conhecimento técnico e científico da humanidade superou a capacidade de um único indivíduo. Assim, é preciso se unir para aplicar este conhecimento de forma prática, pois muitas habilidades altamente especializadas seriam inúteis se não fossem acompanhadas de habilidades complementares.</p>
+          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="card mb-3" >
+    <div class="row no-gutters">
+      <div class="col-md-4">
+        <img src="../../assets/images/noticia 6.jpg" class="card-img" alt="...">
+      </div>
+      <div class="col-md-8">
+        <div class="card-body">
+          <h5 class="card-title">Como se beneficiar das redes sociais?
+
+        </h5>
+          <p class="card-text">Um estudo da Harvard revelou que diversidade é o fator mais importante para se construir um time de sucesso. A pesquisa analisou toda a população de trabalhadores da Suécia por 10 anos. Segundo o estudo, o conhecimento técnico e científico da humanidade superou a capacidade de um único indivíduo. Assim, é preciso se unir para aplicar este conhecimento de forma prática, pois muitas habilidades altamente especializadas seriam inúteis se não fossem acompanhadas de habilidades complementares.</p>
+          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        </div>
+      </div>
+    </div>
+  </div>
+  
