--- a/src/app/feed/feed.component.html
+++ b/src/app/feed/feed.component.html
@@ -32,23 +32,11 @@
                                 <span class="badge badge badge-pill" ></span>
                               </li>
                         <li class="list-group-item d-flex justify-content-between align-items-center h6 text-muted">
-                          Mensagens
-                          <span class="badge badge badge-pill"  id="badge">14</span>
-                        </li>
-                        <li class="list-group-item d-flex justify-content-between align-items-center h6 text-muted">
-                          Notificações
-                          <span class="badge badge badge-pill"  id="badge">2</span>
-                        </li>
-                        <li class="list-group-item d-flex justify-content-between align-items-center h6 text-muted">
-                                Noticias
+                            <a class="nav-link" [routerLink]="'/noticias'">Noticias</a>
                                 <span class="badge badge badge-pill" id="badge">10</span>
                               </li>
                               <li class="list-group-item d-flex justify-content-between align-items-center h6 text-muted">
-                                    Configurações
-                                    <span class="badge badge badge-pill"></span>
-                                  </li>
-                              <li class="list-group-item d-flex justify-content-between align-items-center h6 text-muted">
-                                    Sair
+                                <a class="nav-link" [routerLink]="'/home'"> Sair </a>
                                     <span class="badge badge badge-pill"></span>
                                   </li>
                       </ul>
