--- a/src/app/perfilpessoafisica/perfilpessoafisica.component.css
+++ b/src/app/perfilpessoafisica/perfilpessoafisica.component.css
@@ -10,10 +10,12 @@ body{
 }
 .profile-img{
     text-align: center;
+    
 }
 .profile-img img{
     width: 100%;
     height: 100%;
+    border-radius: 0%;
 }
 .profile-img .file {
     position: relative;
@@ -21,9 +23,9 @@ body{
     margin-top: -20%;
     width: 100%;
     border: none;
-    border-radius: 0;
+    border-radius: 0%;
     font-size: 15px;
-    background: #212529b8;
+    
 }
 .profile-img .file input {
     position: absolute;
@@ -170,4 +172,8 @@ body{
 
 .dropdown-menu{
 color: #138496;
+}
+
+.nav-link{
+    cursor: pointer;
 }
