--- a/src/app/perfilpessoafisica/perfilpessoafisica.component.html
+++ b/src/app/perfilpessoafisica/perfilpessoafisica.component.html
@@ -21,7 +21,7 @@
                     
                         <div class="profile-img">
                             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS52y5aInsxSm31CvHOFHWujqUx_wWTS9iM6s7BAm21oEN_RiGoog" alt=""/>
-                            <div class="file btn btn-lg btn-primary">
+                            <div class="file btn btn-lg btn-info">
                                 Alterar Foto
                                 <input type="file" name="file"/>
                             </div>
@@ -37,23 +37,11 @@
                                 <span class="badge badge badge-pill" ></span>
                               </li>
                         <li class="list-group-item d-flex justify-content-between align-items-center h6 text-muted">
-                          Mensagens
-                          <span class="badge badge badge-pill"  id="badge">14</span>
-                        </li>
-                        <li class="list-group-item d-flex justify-content-between align-items-center h6 text-muted">
-                          Notificações
-                          <span class="badge badge badge-pill"  id="badge">2</span>
-                        </li>
-                        <li class="list-group-item d-flex justify-content-between align-items-center h6 text-muted">
-                                Noticias
-                                <span class="badge badge badge-pill" id="badge">10</span>
+                            <a class="nav-link" [routerLink]="'/noticias'">Noticias</a>
+                                <span class="badge badge badge-pill" id="badge">6</span>
                               </li>
                               <li class="list-group-item d-flex justify-content-between align-items-center h6 text-muted">
-                                    Configurações
-                                    <span class="badge badge badge-pill"></span>
-                                  </li>
-                              <li class="list-group-item d-flex justify-content-between align-items-center h6 text-muted">
-                                    Sair
+                                <a class="nav-link" [routerLink]="'/home'">Sair</a>
                                     <span class="badge badge badge-pill"></span>
                                   </li>
                       </ul>
